Prevent hover overflow
Fixes #49

--- a/css/theme-lava.css
+++ b/css/theme-lava.css
@@ -1319,6 +1319,7 @@ nav .container {
   width: 50%;
   float: left;
   margin-bottom: 0px;
+  max-width: 300px;
 }
 .speaker-with-bio .speaker-description {
   width: 50%;
